# docs/swagger.yaml
@@ -37,6 +37,36 @@ definitions:
       id:
         type: integer
     type: object
+  dto.UserCreateRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
+  dto.UserInfoResponse:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: integer
+      roles:
+        items:
+          $ref: '#/definitions/model.Role'
+        type: array
+      updated_at:
+        type: string
+      username:
+        type: string
+    type: object
   dto.UserPageResponse:
     properties:
       list:
@@ -50,6 +80,58 @@ definitions:
       total:
         type: integer
     type: object
+  dto.UserPermissionsResponse:
+    properties:
+      menus:
+        items:
+          $ref: '#/definitions/model.Menu'
+        type: array
+    type: object
+  model.Menu:
+    properties:
+      children:
+        items:
+          $ref: '#/definitions/model.Menu'
+        type: array
+      createdAt:
+        type: string
+      icon:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      parent_id:
+        type: integer
+      path:
+        type: string
+      sort:
+        type: integer
+      status:
+        type: integer
+      type:
+        type: integer
+      updatedAt:
+        type: string
+    type: object
+  model.Role:
+    properties:
+      code:
+        type: string
+      createdAt:
+        type: string
+      desc:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      status:
+        description: '0: inactive, 1: active, 2: deleted'
+        type: integer
+      updatedAt:
+        type: string
+    type: object
   model.User:
     properties:
       createdAt:
@@ -60,6 +142,10 @@ definitions:
         type: integer
       password:
         type: string
+      roles:
+        items:
+          $ref: '#/definitions/model.Role'
+        type: array
       status:
         description: '0: inactive, 1: active, 2: deleted'
         type: integer
@@ -96,6 +182,23 @@ paths:
       summary: 登录
       tags:
       - auth
+  /auth/permissions:
+    get:
+      consumes:
+      - application/json
+      description: 获取用户权限
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 用户权限响应
+          schema:
+            $ref: '#/definitions/dto.UserPermissionsResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: 获取用户权限
+      tags:
+      - auth
   /auth/register:
     post:
       consumes:
@@ -116,6 +219,23 @@ paths:
           schema:
             $ref: '#/definitions/dto.RegisterResponse'
       summary: 注册
+      tags:
+      - auth
+  /auth/user:
+    get:
+      consumes:
+      - application/json
+      description: 获取用户信息
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 用户信息响应
+          schema:
+            $ref: '#/definitions/dto.UserInfoResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: 获取用户信息
       tags:
       - auth
   /users:
@@ -140,6 +260,23 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get users
+      tags:
+      - users
+    post:
+      description: Create user
+      parameters:
+      - description: user
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserCreateRequest'
+      produces:
+      - application/json
+      responses: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Create user
       tags:
       - users
 securityDefinitions:
